# Decaf

parser/: .gitignore  Decaf.g4  FunctionLockCheckLisnter.cs  Program.cs  README.md  parser.csproj  runAntlr.sh
parser/DecafCodeGenerator/: .editorconfig  .gitignore  BUILD  CMakeLists.txt  build.sh  runAntlr.sh  test.sh
parser/DecafCodeGenerator/cli/: CMakeLists.txt  main.cpp
parser/DecafCodeGenerator/src/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Decaf.cpp  Decaf.h  DecafCodeGenerator.cpp  Exceptions.h  build.sh  main.cpp
parser/DecafCodeGenerator/src/Lexer/: Lexer.cpp  Lexer.h
parser/DecafCodeGenerator/src/Lexer/Token/: Tokens.cpp  Tokens.h
parser/DecafCodeGenerator/src/Parser/: Parser.cpp  Parser.h
parser/DecafCodeGenerator/src/Parser/Ast/: Asts.h
parser/DecafCodeGenerator/src/Parser/CodeGenerator/: CodeGenerator.cpp  CodeGenerator.h
parser/DecafCodeGenerator/test/: CMakeLists.txt  TestGeneration.test.cpp
parser/DecafCodeGenerator/toolchain/: BUILD
parser/examples/: example.dc  simpleForLoopFunctionCall.dc
